# aj

./: .env.example  .gitignore  BACKEND_TESTING.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  STATUS_COMPARISON.md  V1.1_RELEASE.md  V1.1_TASKS.md  VERIFICATION_REPORT.md  api_quota_fix.md.resolved  json_generator.py  walkthrough1.md
backend/: manifest.json  output.json  pyproject.toml  pytest.ini  requirements.txt
backend/src/agents/: orchestrator.py
backend/src/app/: config.py  main.py  websocket_handler.py
backend/src/app/routes/: chat.py  debug.py  graph.py  indexing.py  search.py  v1_1_routes.py
backend/src/embeddings/: embedding_pipeline.py  embedding_service.py  vector_store.py
backend/src/graphs/: asg_builder.py  cfg_builder.py  neo4j_client.py
backend/src/indexing/: ast_parser.py  chunker.py  manifest.py  walker.py
backend/src/intelligence/: code_health_db.py  health_scanner.py  import_resolver.py  static_analyzer.py  symbol_tracer.py
backend/src/memory/: error_memory.py
backend/src/patching/: diff_generator.py  multi_file_planner.py  validator.py
backend/src/reasoning/: __init__.py  llm_client.py
backend/src/retrieval/: context_packer.py  error_path_retrieval.py  ranking.py  semantic_search.py
backend/tests/: test_api.py  test_embeddings.py  test_error_memory.py  test_ranking.py  test_static_analyzer.py  test_walker.py
context/: backend.json  frontend.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  USER_GUIDE.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
models/: download_bge_m3.py
scripts/: start_all.sh  start_backend.bat  start_backend.sh  start_frontend.bat  (+1 more)
(+13 files in other folders)
